--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -2,6 +2,8 @@
   padding: 0 2rem;
 } */
 
+/* footer */
+
 .footer {
   display: flex;
   flex: 1;
@@ -18,11 +20,6 @@
   flex-grow: 1;
 }
 
-.logo {
-  height: 1em;
-  margin-left: 0.5rem;
-}
-
 .heroContainer {
   background-image: url('../public/images/homepage-images/hero-main.jpg');
   background-size: cover;
@@ -37,6 +34,8 @@
   color: white;
 }
 
+/* header */
+
 .header {
 background-color: #35527a;
 padding-bottom: 1rem;
@@ -46,6 +45,8 @@ padding-bottom: 1rem;
   text-align: center;
   padding-top: 1rem;
 }
+
+/* header */
 
 .navMenu {
   margin-top: 3.5rem;
@@ -59,6 +60,18 @@ padding-bottom: 1rem;
   color: white;
 }
 
-.insuranceCompanies {
+/* insurance companies */
 
+.insuranceCompanies {
+   text-align: center;
+   margin-top: 3rem;
 }
+
+.insuranceImages {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+}
+
+/* new facilities */
+
+
