--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,45 +1,33 @@
-/* .container {
-  padding: 0 2rem;
-} */
-
 /* footer */
 
 .footer {
-  display: flex;
-  flex: 1;
-  padding: 2rem 0;
-  border-top: 1px solid #eaeaea;
-  justify-content: center;
-  align-items: center;
-}
-
-.footer a {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-grow: 1;
-}
-
-.heroContainer {
-  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),  url('../public/images/homepage-images/main-slider.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  height: 80vh;
-  /* margin: -1.4rem; */
-  background-position: center center;
-
-}
-
-.heroOverlay {
+  display: grid;
+  justify-items: center;
+  grid-template-columns: repeat(5, 1fr);
   text-align: center;
+  border-top: 1px solid #eaeaea;
+  background-color: rgb(31, 31, 31);
   color: white;
+  padding: 2rem 10rem
 }
+
+.copyright {
+  text-align: center;
+  background-color: rgb(31, 31, 31);
+  margin: 0;
+  padding: 0 0 1rem 0;
+  color: #b7b7b7;
+  font-size: 0.8rem;
+}
+
 
 /* header */
 
 .header {
-background-color: #35527a;
+/* background-color: #35527a; */
+background-color: rgb(31, 31, 31);
 padding-bottom: 1rem;
+box-shadow: 15px 20px #fdfdfd;
 }
 
 .logo {
@@ -67,22 +55,42 @@ padding-bottom: 1rem;
 }
 
 .phoneContact {
-  background-color: rgb(49, 49, 49);
+  background-color: rgb(51, 82, 139);
   padding: 0.6rem;
 }
 
+/* main slider */
+
+.heroContainer {
+  background: linear-gradient( rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5) ),  url('../public/images/homepage-images/main-slider.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 80vh;
+  /* margin: -1.4rem; */
+  background-position: center center;
+}
+
 .heroOverlay {
-  padding-top: 12rem;
+  text-align: center;
+
+}
+
+
+.heroOverlay {
+  padding-top: 10rem;
 }
 
 .mainHeading { 
   text-transform: capitalize;
-  font-size: 3rem;
+  font-size: 4rem;
+  color:  #ffffff;;
+  margin: 2rem 40rem
 }
 
 .subHeading {
   margin: 0 20rem 2rem 20rem;
   font-size: 1.2rem;
+  color:white
 }
 
 .servicesButton {
@@ -96,6 +104,7 @@ padding-bottom: 1rem;
   cursor: pointer;
   transition: color 0.4s linear;
   color: white;
+  background-color: rgb(51, 82, 139);
 }
 
 .contactButton {
@@ -109,6 +118,7 @@ padding-bottom: 1rem;
   cursor: pointer;
   transition: color 0.4s linear;
   color: white;
+  background-color: rgb(51, 82, 139);
 }
 
 .contactButton:hover {
@@ -145,7 +155,7 @@ padding-bottom: 1rem;
 .paintBooth {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  background-color: #35527a;
+  background-color: rgb(31, 31, 31);
   height: fit-content
 }
 
@@ -223,4 +233,20 @@ height: 25rem;
 
 .bookQuoteSubHeading {
   font-size: 1.2rem;
+}
+
+/* about us  */
+
+.aboutUsContainer {
+  text-align: center;
+  margin: 2rem 20rem;
+  line-height: 1.5rem;
+}
+
+.aboutUsHeading {
+  font-size: 2rem;
+}
+
+.aboutUsSubHeading {
+
 }
